# ns-dispatch-utility

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml  tests.yml
nsdu/: __init__.py  __main__.py  api_adapter.py  bb_parser.py  bbc_parser.py  config.py  config.toml  cred.py  dispatch.py  dispatch_api.py  exceptions.py  feature.py  info.py  loader.py  loader_api.py  loader_managers.py  ns_api.py  renderer.py  types.py  updater.py  updater_api.py  utils.py
nsdu/loaders/: file_dispatch_loader.py  file_dispatchloader.py  file_simple_bbc_loader.py  file_simplebbloader.py  file_template_var_loader.py  file_templatevarloader.py  file_varloader.py  google_dispatch_loader.py  google_dispatchloader.py  json_cred_loader.py  json_credloader.py  json_template_var_loader.py  json_templatevarloader.py
tests/: conftest.py  test_api_adapter.py  test_bb_parser.py  test_bbc_parser.py  test_config.py  test_cred.py  test_dispatch.py  test_dispatch_api.py  test_file_dispatch_loader.py  test_file_dispatchloader.py  test_file_simple_bbc_loader.py  test_file_simplebbloader.py  test_file_template_var_loader.py  test_file_templatevarloader.py  test_file_varloader.py  test_google_dispatch_loader.py  test_google_dispatchloader.py  test_json_cred_loader.py  test_json_credloader.py  test_json_template_var_loader.py  test_json_templatevarloader.py  test_loader.py  test_loader_managers.py  test_ns_api.py  test_nsadm.py  test_nsdu.py  test_renderer.py  test_updater.py  test_updater_api.py  test_utils.py
tests/resources/: bb_complex_formatter_config.toml  bb_complex_formatters.py  bb_simple_formatters.toml  bbc_complex_formatters.py  cred_loader.py  credloader-test1.py  dispatch_loader.py  dispatchloader-test1.py  filters-1.py  filters-2.py  filters.py  simple_bbc_loader.py  simplebbloader-test1.py  template_var_loader_1.py  template_var_loader_2.py  templatevarloader-test1.py  templatevarloader-test2.py  varloader-test1.py  varloader-test2.py
tests/resources/default/: simplebbloader-test2.py  templatevarloader-test3.py  varloader-test3.py
