[tool.poetry]
name = "nsdu"
version = "0.3.0"
description = "A tool to format and update NationStates dispatches."
authors = ["watarinishin <watarichanno@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nationstates = "^3.0.2"
toml = "^0.10.2"
bbcode = "^1.1.0"
Jinja2 = "^3.1.2"
appdirs = "^1.4.4"
pluggy = "^1.0.0"
google-api-python-client = "^2.15.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"
certifi = "^2023.07.22"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.5"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nsdu = "nsdu.__main__:main"
