[tool.poetry]
authors = ["watarinishin <watarichanno@gmail.com>"]
description = "A tool to format and update NationStates dispatches."
license = "MIT"
name = "nsdu"
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
appdirs = "^1.4.4"
bbcode = "^1.1.0"
certifi = "^2023.07.22"
google-api-python-client = "^2.15.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"
nationstates = "^3.0.2"
pluggy = "^1.0.0"
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
freezegun = "^1.2.2"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
nsdu = "nsdu.__main__:main"
