[tool.poetry]
authors = ["USoVietnam <watarichanno@gmail.com>"]
description = "A tool to format and update NationStates dispatches."
license = "MIT"
name = "nsdu"
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
Jinja2 = "^3.1.4"
appdirs = "^1.4.4"
bbcode = "^1.1.0"
google-api-python-client = "^2.15.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.2.1"
nationstates = "^3.1.4"
pluggy = "^1.0.0"
python = "^3.11"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pytest = "^8.3.4"
ruff = "^0.8.5"
pre-commit = "^4.0.1"

[tool.ruff.lint]
extend-select = ["I"]

[tool.poetry.scripts]
nsdu = "nsdu.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
